# Astar-diffdrive-robot

./: Astar_diffdrive.py  CMakeLists.txt  Readme.md  package.xml
Part-2/: CMakeLists.txt
Part-2/src/: Astar_diffdrive.py  control1.py  obstacle_gen_gazebo.py
launch/: turt.launch  turtlebot3_world.launch
src/: Astar_diffdrive.py  Astar_diffdrive_gazebo.py  control.py  control1.py  obstacle_gen.py  obstacle_gen_gazebo.py
world/: aas.py  astar.py  astra.py  control.py  obstacle_gen.py  reimp.py
